--- a/src/app/components/partials/header/header.component.html
+++ b/src/app/components/partials/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header-conteiner">
   <div class="header-logo">
-    <img src="../../../../assets/img/logo.png" alt="" />
+    <img src="assets/img/logo.png" alt="" />
   </div>
 
   <div class="btns__open-close">
