--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -12,7 +12,7 @@
   <div class="card">
     <div class="title">Instituição Parceira</div>
     <div class="line">
-      <img src="../../../../assets/img/logopcsc.png" alt="" />
+      <img src="assets/img/logopcsc.png" alt="" />
       <div class="title">DPCAMI - Brusque</div>
     </div>
   </div>
