--- a/src/app/components/pages/saiba-mais/saiba-mais.component.html
+++ b/src/app/components/pages/saiba-mais/saiba-mais.component.html
@@ -3,7 +3,7 @@
     <div class="main_title-img">
       <div class="main_title">O que é o Violentômetro?</div>
       <div class="main_img">
-        <img src="../../../../assets/img/Violentômetro.jpeg" alt="" />
+        <img src="assets/img/Violentômetro.jpeg" alt="" />
       </div>
     </div>
     <div class="main_texto">
