--- a/src/app/components/partials/card-faq-extra/card-faq-extra.component.html
+++ b/src/app/components/partials/card-faq-extra/card-faq-extra.component.html
@@ -32,11 +32,11 @@
   <div class="conteudo" *ngIf="status">
     <div class="extra_img">
       <div class="img_desktop" *ngIf="TipoExtra == 'Foto Desktop'">
-        <img src="../../../../assets/img/{{ link }}" alt="" />
+        <img src="assets/img/{{ link }}" alt="" />
         <div class="title"><span>Titulo: </span>{{ TituloExtra }}</div>
       </div>
       <div class="img_mobile" *ngIf="TipoExtra == 'Foto Mobile'">
-        <img src="../../../../assets/img/{{ link }}" alt="" />
+        <img src="assets/img/{{ link }}" alt="" />
         <div class="title"><span>Titulo: </span>{{ TituloExtra }}</div>
       </div>
     </div>
