--- a/src/app/components/partials/card-faq/card-faq.component.html
+++ b/src/app/components/partials/card-faq/card-faq.component.html
@@ -12,7 +12,7 @@
     <div class="conteudoAudio">
       <audio controls="controls">
         <source
-          src="../../../../assets/{{ resposta[0].nomeAutor }}/{{
+          src="assets/{{ resposta[0].nomeAutor }}/{{
             resposta[0].resposta
           }}"
           type="audio/mp3"
