--- a/src/app/components/partials/footer/footer.component.html
+++ b/src/app/components/partials/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="footer_cont">
     <div class="footer_logo-slogan">
       <div class="footer_logo">
-        <img src="../../../../assets/img/logo.png" alt="" />
+        <img src="assets/img/logo.png" alt="" />
       </div>
       <div class="footer_slogan">
         <h3>Unindo forças contra a violência doméstica</h3>
