--- a/src/app/components/partials/small-card/small-card.component.html
+++ b/src/app/components/partials/small-card/small-card.component.html
@@ -1,7 +1,7 @@
 <div class="small-card_conteiner">
   <a routerLink="/content/{{ id }}">
     <div class="card_img">
-      <img src="../../../../assets/img/{{ img }}" alt="" />
+      <img src="assets/img/{{ img }}" alt="" />
       <div class="card_title">{{ titulo }}</div>
     </div>
     <div class="card_text">
